[package]
name = "ddns-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
time = "0.3"
rand = "0.8.5"
dotenvy = "0.15.7"
serde_json = "1.0"